main.css
/* ... */
.read-more-button {
  margin-right: auto;
  margin-left: auto;
  border: 1px none #000;
  border-radius: 12px;
  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
  opacity: 1;
  -webkit-transition: opacity 200ms ease;
  transition: opacity 200ms ease;
  font-family: Raleway, sans-serif;
  color: #fff;
  text-align: center;
  cursor: pointer;
}


.footer{
   width: 100vw;
   display: block;
   overflow: hidden;
   padding: 10px 0;
   box-sizing: border-box;
   background: rgba(255,196,51,0.7);
}

.inner-footer{
  display: block;
  text-align: center;
  font-family: Helvetica;
}

.sponsors{
  margin: 3%;
  float: left;
  text-align: center;
  vertical-align: middle;
  text-align:center;
}

.three-table {
  table-layout: fixed;
  width: 50% ;
  border-collapse: collapse;
  float: left;
  margin-left: 25%;
  margin-top: 4%;
  margin-bottom: -3%;
}

.four-table {
  table-layout: fixed;
  width: 70% ;
  border-collapse: collapse;
  float: left;
  margin-left: 15%;
  margin-top: -4%;
  margin-bottom: -3%;
}

td {
    padding: 0 25px;
  }

.div-block-2 {
  display: block;
  width: 100%;
  -o-object-fit: fill;
  object-fit: fill;
  padding: 5%
}

.heading-3 {
  font-family: Raleway, sans-serif;
  text-align: center;
}

.list {
  padding-left: 0px;
  list-style-type: none;
}
.footer-icons {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 20px; /* Space between icons */
  margin-top: 20px;
}

.footer-icons a {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 60px; /* Increase circle size */
  height: 60px; /* Increase circle size */
  border-radius: 50%;
  background: #f09b29; /* Consistent background */
  color: white;
  text-align: center;
  font-size: 32px; /* Increase icon size */
  transition: transform 0.2s ease;
  text-decoration: none;
}

.footer-icons a:hover {
  transform: scale(1.1);
  background: #ffaf40; /* Slightly lighter on hover */
}
.footer-icons {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 20px; /* Space between icons */
  margin-top: 20px;
}

.footer-icons a {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 60px; /* Increase circle size */
  height: 60px; /* Increase circle size */
  border-radius: 50%;
  background: #f09b29; /* Consistent background */
  color: white;
  text-align: center;
  font-size: 32px; /* Increase icon size */
  transition: transform 0.2s ease;
  text-decoration: none;
}

.footer-icons a:hover {
  transform: scale(1.1);
  background: #ffaf40; /* Slightly lighter on hover */
}


.contact-list-item {
  margin-top: 0px;
  padding-top: 10px;
  padding-bottom: 10px;
  border: 0px solid #000;
  border-radius: 0px;
  font-family: Raleway, sans-serif;
  text-align: left;
  list-style-type: none;
}

.list-2 {
  width: 287px;
}

.paragraph-2 {
  font-family: Raleway, sans-serif;
  text-align: center;
}

.paragraph-4 {
  font-family: Raleway, sans-serif;
  text-align: left;
  line-height: 170%;
}

.cards-section {
  padding-top: 60px;
  padding-bottom: 60px;
}

.centered-container-2 {
  -webkit-box-flex: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.centered-container-3 {
  -webkit-box-flex: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
}

.image-column {
  float: left;
  width: 33%;
  padding: 5px;
  margin-bottom: 7px
}

.cards-grid-container {
  display: -ms-grid;
  display: grid;
  grid-auto-columns: 1fr;
  grid-column-gap: 40px;
  grid-row-gap: 40px;
  -ms-grid-columns: 1fr 1fr 1fr;
  grid-template-columns: 1fr 1fr 1fr;
  -ms-grid-rows: 0.5fr auto;
  grid-template-rows: 0.5fr auto;
  text-align: left;
}

.cards-image-mask {
  position: relative;
  overflow: hidden;
  width: 100%;
  padding-top: 220px;
  padding-bottom: 0px;
  border-radius: 0%;
}

.cards-image {
  position: absolute;
  left: 0%;
  top: 0%;
  right: 0%;
  bottom: 0%;
  display: inline-block;
  overflow: hidden;
  width: 100%;
  height: 100%;
  max-width: none;
  margin-top: 0px;
  padding: 0px;
  border-radius: 0px;
  -o-object-fit: contain;
  object-fit: contain;
  -o-object-position: 50% 50%;
  object-position: 50% 50%;
}

.cards-image.row1 {
  position: absolute;
  display: inline-block;
  margin-top: 0px;
  margin-left: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-left: 0px;
  border-radius: 0px;
  opacity: 1;
  -webkit-filter: blur(0px);
  filter: blur(0px);
  -webkit-transform: translate(0px, 0px) scale3d(1none, 1none, 1none) translate(0px, 0px);
  transform: translate(0px, 0px) scale3d(1none, 1none, 1none) translate(0px, 0px);
  -webkit-transform-style: preserve-3d;
  transform-style: preserve-3d;
}

.cards-image.row2 {
  margin-top: 0px;
}

.heading-4 {
  font-family: Raleway, sans-serif;
}

.grid {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.paragraph-3 {
  font-family: Raleway, sans-serif;
}

.heading-5 {
  font-family: Raleway, sans-serif;
  font-size: 30px;
}

.about-cards {
  text-align: center
}

.about-paragraph {
  margin-top: 20px;
  margin-bottom: 20px;
  font-family: Raleway, sans-serif;
}

.flex-photos {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
}

.header-feature {
  position: absolute;
  bottom: 8px;
  right: 16px;
}

.committee-section {
  display: flex;
  flex-direction: row;
  flex: 0 4;
  margin: 6% 15% 6%;
}

.col-1 {
  max-width: 45%;
}

.apply-section {
  display: flex;
  flex-direction: row;
  overflow-x: scroll;
  background-color: #98CDDE;
  width: 100%;
  height: 30vh;
  padding: 3% 10%;
  justify-content: center;
}

.apply-col {
  width: 33%;
}

.date-box {
  display: inline-block;
  color: white;
  font-size: 1.2em;
  background-color: #101010;
  box-shadow: inset 0 0 0 0em;
  margin-bottom: 1.2em;
  padding: 0.25em 1em 0.2em 1em;
  border-radius: 0.75em;
  font-family: Raleway, sans-serif;
  opacity: 0.8;
}
/* ... */

